--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,17 +4,17 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label :name %><br />
+    <div class="field mb-2">
+      <%= f.label :name, class: "form-label" %>
       <%= f.text_field :name, class: "form-control" %>
     </div>
-    <div class="field">
-      <%= f.label :email %><br />
+    <div class="field mb-2">
+      <%= f.label :email, class: "form-label" %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password %>
+    <div class="field mb-2">
+      <%= f.label :password, class: "form-label" %>
       <% if @minimum_password_length %>
       <% end %><br />
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
