add driver acceptance

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,10 @@
 .trip-card {
   max-width: 500px;
 }
+
+.initials {
+  padding: .5rem;
+  margin: .5rem;
+  background-color: lightblue;
+  border-radius: 50%;
+}
