--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -3,6 +3,9 @@
     <%= form.label :title, class: "form-label" %>
     <%= form.text_field :title, class: "form-control" %>
   </div>
+
+  <div id="map"></div>
+
   <div class="mb-3">
     <%= form.label :origin, class: "form-label" %>
     <%= form.text_field :origin, class: "form-control" %>
@@ -26,3 +29,57 @@
 
   <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
+
+<script>
+  function initMap() {
+    const map = new google.maps.Map(document.getElementById("map"), {
+      center: { lat: 40.749933, lng: -73.98633 },
+      zoom: 13,
+      mapTypeControl: false,
+    });
+
+    const input = document.getElementById("trip_origin")
+    const autocomplete = new google.maps.places.Autocomplete(input);
+    autocomplete.bindTo("bounds", map);
+
+    // const infowindow = new google.maps.InfoWindow();
+    // const infowindowContent = document.getElementById("infowindow-content");
+
+    // infowindow.setContent(infowindowContent);
+
+    const marker = new google.maps.Marker({
+      map,
+      anchorPoint: new google.maps.Point(0, -29),
+    });
+
+      autocomplete.addListener("place_changed", () => {
+      marker.setVisible(false);
+
+      const place = autocomplete.getPlace();
+
+      if (!place.geometry || !place.geometry.location) {
+        // User entered the name of a Place that was not suggested and
+        // pressed the Enter key, or the Place Details request failed.
+        window.alert("No details available for input: '" + place.name + "'");
+        return;
+      }
+
+      // If the place has a geometry, then present it on a map.
+      if (place.geometry.viewport) {
+        map.fitBounds(place.geometry.viewport);
+      } else {
+        map.setCenter(place.geometry.location);
+        map.setZoom(17);
+      }
+
+      marker.setPosition(place.geometry.location);
+      marker.setVisible(true);
+    });
+  }
+  window.initMap = initMap;
+
+
+  
+</script>
+<script async src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY']%>&callback=initMap&libraries=maps,marker,places&v=beta"></script>
+
